tests/backend/checkmach/fail2.output
File "fail2.ml", line 1, characters 5-15:
Error: Annotation check for zero_alloc strict failed on function Fail2.test (camlFail2.test_HIDE_STAMP)
